docs(review-log): comprehensive 2026-05-13 walkthrough entry
Replaces the narrow split-removal entry with one covering the whole
seven-lesson walkthrough: ADR 0014 rename, broadened iteration_
diagnostics, ADR 0015 shim checkpoint, ADR 0016 models namespace,
ADR 0017 topic coherence + revisions (including the 2026-05-13 split
removal), ADR 0018 DocSpec, ADR 0019 mllib/topic + BOWDocument move,
the topic_mask rename, the PatientYearDocSpec NULL fix, the
kwarg-enumeration documentation, the --max-iter doc clarification,
the TOPIC_STATE_MODELING.md DocSpec section, and the insights-log
convention review (no code change but worth naming as load-bearing
project infrastructure).

Adds pre-existing-issues-caught and threads-parked sections so
future readers see what was deliberately left for later (the
fit_charmpheno_local.py JDK 17 security-manager fix and the
Makefile recipe template).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>